tests/NormalTests/paczka1/small_fuzzy/25983804.err
Error in line 4: 061NCH S553 35,38
Error in line 2: S553 S1 24,2
Error in line 11: S553 A275 69,9
Error in line 12: 061NCH S1 30,8
